# rpi-camera-apps

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
apps/: camera_test.py  email_time_lapse.py
rca/: __init__.py  emails.py  logger.py
rca/camera/: __init__.py  time_lapse.py
src/rca/: emails.py
src/rca/camera/: time_lapse.py
test/: test_cam.py
