[tool.poetry]
name = "rpi-camera-apps"
version = "0.2.0"
description = "Raspberry Pi Camera Apps"
authors = ["Channing Ko-Madden <channingkomadden@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs.options]
system-site-packages = true

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
python-lsp-server = "*"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["example_*.*", ".venv"]
extend-exclude = ["^/src/*"]

[tool.ruff.lint]
ignore = [
    "E731", # E731 forbids lambda assignments
    "F403" # F403 forbids "import *" (used in __init__.py)
] 
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["rca"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
